syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "TeamEntityInfo.proto";

// CmdId: 334
// EnetChannelId: 0
// EnetIsReliable: true
message SyncTeamEntityNotify {
	uint32 scene_id = 13;
	repeated TeamEntityInfo team_entity_info_list = 2;
}
